# RaytracingCuda

./: CMakeLists.txt
assets/: camera_test.json  lens_system_test.json
headers/: camera.cuh  ray.cuh  render.cuh  util_json.cuh  util_json.h
python/: 1.py  2.py  3.py  camera_lens_matrix.py  convex_lens.py  lens-system.py  plot_image.py  test.py
sources/: camera.cpp  main.cu  main_lens_in_ray.cu  util_json.cpp
